package command;

import "DualStickRawInputCommand.proto";


message RawInputCommand
{
    enum RawInputCommandType
    {
        DUALSTICK = 0;
    }
    required RawInputCommandType type = 1 [default = DUALSTICK];
    required string UUID = 2;
    optional DualStickRawInputCommand dualStickRawInputCommand = 3;
}
